--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 Optional:
     filter, flat_map, map, eq, hash
-    add tests and docstr for them
+    add docstr for them
 
 Result:
     add docstr, tests
